[package]
name = "kemonoparty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="0.11.3",features = ["json","stream"] }
indicatif = "0.15.0"
futures-util = "0.3.14"
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.1"
zip="0.6"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0"